test/corpus/logical_or_and.txt
================================================================================
logical or and
================================================================================
true || 1 && true

--------------------------------------------------------------------------------

(source_file
  (expression
    (binary_expression
      (expression
        (primary_expression
          (true)))
      (expression
        (binary_expression
          (expression
            (primary_expression
              (number_literal)))
          (expression
            (primary_expression
              (true))))))))
