test/corpus/macro.txt
================================================================================
macro
================================================================================
[1, 2, 3].exists(e, e > 0)

--------------------------------------------------------------------------------

(source_file
  (expression
    (primary_expression
      (call_expression
        (expression
          (primary_expression
            (member_expression
              (primary_expression
                (list
                  (expression
                    (primary_expression
                      (number_literal)))
                  (expression
                    (primary_expression
                      (number_literal)))
                  (expression
                    (primary_expression
                      (number_literal)))))
              (identifier))))
        (arguments
          (expression
            (primary_expression
              (identifier)))
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (identifier)))
              (expression
                (primary_expression
                  (number_literal))))))))))
